2000-04-18  Michael Natterer  <mitch@gimp.org>

	* app/user_install.c: Creating the user's gimp directory may take
	some time on NFS, so users may be tempted to press the "Continue"
	button again.
	Inform the user that this step may take some time and set the
	"Continue" and "Cancel" buttons insensitive until finished.

2000-04-18  Sven Neumann  <sven@gimp.org>

        * INSTALL: we require gtk+-1.2.6 and we would like to have the 
	freefont package installed.
	( This change is not gimp-cornwell-000415-0, since IMHO this patch
	  makes things worse. )

	* plug-ins/script-fu/scripts/Makefile.am
	* plug-ins/script-fu/scripts/color-cycling.scm: removed since it
	didn't work at all and even after fixing it the effect wasn't
	worth distributing it
	
	* plug-ins/script-fu/scripts/3dTruchet.scm
	* plug-ins/script-fu/scripts/addborder.scm
	* plug-ins/script-fu/scripts/blended-logo.scm
	* plug-ins/script-fu/scripts/comic-logo.scm
	* plug-ins/script-fu/scripts/crystal-logo.scm
	* plug-ins/script-fu/scripts/fade-outline.scm
	* plug-ins/script-fu/scripts/fuzzyborder.scm
	* plug-ins/script-fu/scripts/lava.scm: 
	applied gimp-simon-20000417-0, a patch by Simon Budig, which makes
	more scripts use SF-ADJUSTMENT instead of SF-VALUE.

2000-04-18  Sven Neumann  <sven@gimp.org>
	
	* plug-ins/FractalExplorer/Dialogs.c: i18n fix
	* plug-ins/gdyntext/gdyntext_ui.c: ditto, plus indentation

2000-04-17  Michael Natterer  <mitch@gimp.org>

	* plug-ins/helpbrowser/helpbrowser.c (open_browser_dialog):
	install gimp's colormap to avoid flickering on 8 bit displays.

2000-04-16  Michael Natterer  <mitch@gimp.org>

	* app/gdisplay_ops.c (gdisplay_shrink_wrap): block all canvas
	events while resizing the display so the standard canvas "expose"
	and "configure" handlers are not called.
	This optimization is valid because shrink_wrap's caller has to do
	a full recalculation and expose of the gdisplay anyway.
	For the same reason, I removed the calls to gdisplay_expose_full()