@@ -19,12 +19,15 @@
  *
  * $Id$
  */
+#include "config.h"
 
 #include <stdio.h>
+
 #include <gtk/gtk.h>
-#include "libgimp/stdplugins-intl.h"
+
 #include "message_window.h"
 
+#include "libgimp/stdplugins-intl.h"
 
 static void message_window_class_init(MessageWindowClass *class);
 static void message_window_init(MessageWindow *mw);
